--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "dev": "webpack-dev-server --inline --progress --config build/webpack.dev.conf.js",
     "start": "node server.js",
     "build": "node build/build.js",
-    "postinstall": "npm install express",
+    "postinstall": "npm install express"
   },
   "dependencies": {
     "axios": "^0.18.0",
